Wrapped moviecomponent and moves card styi´ling to the outer element to fix unwanted click area

--- a/src/components/Movie/style.module.scss
+++ b/src/components/Movie/style.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables.scss';
 .card {
     padding: 20px;
+    margin: 0;
 }
 .img {
    object-fit: cover;
